remove --illegal-access=permit