@@ -47,7 +47,7 @@
 		<sonar.organization>ardoco</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<aggregate.report.dir>tests/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
-		<argLine>--illegal-access=permit -Xmx4g -Xss256m</argLine>
+		<argLine>-Xmx4g -Xss256m</argLine>
 	</properties>
 
 	<dependencyManagement>
